--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -18,8 +18,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 1.5rem;
-        padding-top: 4rem;
+        gap: 1rem;
+        padding-top: 2rem;
         margin-left: 2rem;
 
         &--names{
@@ -39,6 +39,10 @@
             display: flex;
             gap: 0.3rem;
         }
+    }
+
+    &__select{
+        padding: 0.3rem;
     }
 }
 
