--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -18,6 +18,7 @@
     &__form--input{
         width: 20rem;
         padding: 0.9rem;
+        border: 1px solid rgba(0, 0, 0, 0.13);
     }
 
     &__icon{
@@ -31,7 +32,7 @@
         align-items: center;
         gap: 0.5rem;
         width: fit-content;
-        color: black;
+        font-size: 1rem;
     }
 }
 
