--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -1,6 +1,6 @@
 .products{
     margin-left: 260px;
-    padding: 1rem 4rem;
+    padding: 0 4rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
