--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -18,7 +18,7 @@ button{
     cursor: pointer;
 }
 
-input{
+input, select{
     border: 1px solid rgba(0, 0, 0, 0.219);
     border-radius: 0.3rem;
     padding: 0.5rem;
