--- a/src/components/adminMain/adminMain.scss
+++ b/src/components/adminMain/adminMain.scss
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    max-height: 800px;
+    overflow-y: scroll;
+    max-height: 500px;
 
     &__summary{
         display: grid;
