--- a/src/components/adminProducts/adminProducts.scss
+++ b/src/components/adminProducts/adminProducts.scss
@@ -1,20 +1,20 @@
-.admin-products{
+.admin-products {
     padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
 
-    &__nav{
+    &__nav {
         display: flex;
         justify-content: space-between;
     }
 
-    &__img{
+    &__img {
         width: 45px;
         height: 35px;
     }
 
-    &__container{
+    &__container {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
@@ -22,12 +22,20 @@
         height: 410px;
     }
 
-    &__product{
+    &__product {
         display: flex;
         align-items: center;
         justify-content: space-between;
         border: 1px solid rgba(0, 0, 0, 0.192);
         border-radius: 0.5rem;
         padding: 1rem;
+    }
+
+    &__btn--edit,
+    &__btn--delete {
+        width: fit-content;
+        height: fit-content;
+        padding: 0.5rem 1rem;
+        box-shadow: none;
     }
 }
