--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -34,5 +34,11 @@
         width: fit-content;
         font-size: 1rem;
     }
+
+    &__cart{
+        border: none;
+        box-shadow: none;
+        width: fit-content;
+    }
 }
 
