--- a/src/components/shoppingCart/shoppingCart.scss
+++ b/src/components/shoppingCart/shoppingCart.scss
@@ -16,7 +16,8 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.178);
 
     &__title{
-        
+        border-bottom: 1px solid rgba(0, 0, 0, 0.212);
+        padding: 1rem;
     }
 
     &__container{
@@ -64,7 +65,8 @@
     &__total{
         display: flex;
         justify-content: space-between;
-        padding: 0 2rem;
+        padding: 0.5rem 2rem;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.212);
     }
 
     &__buy{
@@ -77,4 +79,8 @@
     width: fit-content;
     height: fit-content;
     padding: 0.4rem;
+}
+
+.hidde{
+    display: none;
 }
