--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -39,6 +39,16 @@
         border: none;
         box-shadow: none;
         width: fit-content;
+        position: relative;
+        padding: 0.6rem;
+
+        &--count{
+            position: absolute;
+            top: 0;
+            right: 0.3rem;
+            color: rgb(255, 136, 0);
+            font-weight: bold;
+        }
     }
 }
 
