--- a/src/components/shoppingCart/shoppingCart.scss
+++ b/src/components/shoppingCart/shoppingCart.scss
@@ -24,6 +24,8 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        overflow-y: scroll;
+        max-height: 280px;
     }
 
     &__text{
