--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -24,3 +24,9 @@ input, select{
     padding: 0.5rem;
     outline: none;
 }
+
+div::-webkit-scrollbar{
+    width: 5px;
+    background-color: rgba(0, 0, 0, 0.219);
+    border-radius: 0.5rem;
+}
