--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -30,3 +30,8 @@ div::-webkit-scrollbar{
     background-color: rgba(0, 0, 0, 0.219);
     border-radius: 0.5rem;
 }
+
+section::-webkit-scrollbar{
+    background-color: rgba(0, 0, 0, 0.219);
+    border-radius: 0.5rem;
+}
